# pricetheory_sv_cb

./: .codexrc  .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
analysis/: 00master.do  10globals.do  30clean.do
analysis/clustering/: config.py
analysis/competitor_clustering/: README.md  analyze_clusters.py  test_full_pipeline_small.py  test_llm_validation.py  test_pipeline.py
analysis/competitor_clustering/configs/: base.yaml
analysis/competitor_clustering/legacy/: 01_sector_survey_phases_1_2.py  README.md
analysis/competitor_clustering/scripts/: run_pipeline.py
analysis/competitor_clustering/src/competitors/: __init__.py  cluster.py  config.py  embed.py  graph.py  llm_validate.py  pipeline.py  text_prep.py  validate.py
analysis/cost_estimation/: 01_semrush_cost_estimate.py  02_semrush_units_calculation.py
analysis/data_preparation/: 01_import_filter_orgs.py  urlcheck_sample.py
analysis/expectedparrot/: 01_starter_tutorial.py  03_healthcare_company_analysis.py  04_full_dataset_analysis.py
data/processed/competitor_clustering/: metadata.json
data/processed/competitor_clustering_test/: adjacency_matrix.npz  embeddings.npy  llm_validation_results.json  metadata.json
legacy/clustering_v1/: README.md
src/imagenet_cb/: __init__.py  download.py  filter.py  milestones.py  paths.py
tests/: test_competitors.py  test_description_length.py
